--- a/app/css/main.css
+++ b/app/css/main.css
@@ -11,8 +11,8 @@ h1 {
     text-align: center;
 }
 
-form, div.transaction {
-    width: 750px;
+.panel {
+    width: 850px;
     font-size: 16px;
     background: #555;
     border: 5px solid #009999;
@@ -27,11 +27,6 @@ form, div.transaction {
 
     -webkit-animation: slideDown 0.5s ease-out;
     -webkit-animation-iteration-count: 1;
-}
-
-div.transaction svg {
-    margin-left: 10px;
-    font-size: 2em;
 }
 
 input, select { 
@@ -82,6 +77,11 @@ button:disabled {
     color: #333;
     width: 30em;
     height: 3em;
+}
+
+div.transaction svg {
+    margin-left: 10px;
+    font-size: 2em;
 }
 
 div.transaction.waiting-transaction {
